# vibe-to-viral-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  start_docker.sh  start_system.sh  trends.json
R&D/rust_scraper/: Cargo.toml
R&D/rust_scraper/src/: main.rs
cpp_dsp/: CMakeLists.txt  analyzer.cpp
go_gateway/: go.mod  main.go
python_ai/: ai_engine.py  audio_expert.py  audio_splicer.py  cloud_llm.py  cloud_trends.py  global_scraper.py  lyric_engine.py  requirements.txt  trend_engine.py
